# ely-eye

./: .env.example  .gitignore  Dockerfile  README.md  TRAINING_ARTIFACTS.md  docker-compose.yml
.github/workflows/: mcp-release.yml
backend/: README.md  pyproject.toml  requirements-ktransformers-linux.txt  requirements-sglang-linux.txt  requirements-vllm-linux.txt
backend/src/ely_eye/: __init__.py  api.py  benchmarks.py  cache_fabric.py  cartridge.py  cartridge_assets.py  cli.py  compiler.py  config.py  db.py  dvkv.py  embeddings.py  evals.py  evidence_graph.py  ingestion.py  ocr.py  profiles.py  research_modules.py  retrieval.py  runtime.py  schemas.py  storage.py  training.py  verifier.py
ely-eye-mcp/: .gitattributes  README.md  go.mod  go.sum  install.ps1  install.sh
ely-eye-mcp/cmd/ely-eye-mcp/: main.go
ely-eye-mcp/docs/: RESEARCH.md
ely-eye-mcp/internal/cli/: cli.go
ely-eye-mcp/internal/config/: config.go
ely-eye-mcp/internal/contextpack/: compiler.go
ely-eye-mcp/internal/domain/: types.go
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/scripts/: verify-ui.mjs
frontend/src/: App.tsx  api.ts  styles.css  types.ts
scripts/: download-models.ps1  download_models.py  install-cuda-torch.ps1  install.ps1  launch-ktransformers-extreme.ps1  launch-llamacpp-offline.ps1  launch-sglang-extreme.ps1  launch-sglang-live.ps1  launch-vllm-extreme.ps1  launch-vllm-live.ps1  run-all-prd-finetunes.ps1  run-prd-finetune.ps1  serve-backend.ps1  serve-frontend.ps1  setup-linux-runtimes.ps1  verify.ps1
(+9 files in other folders)
